<resources>
    <string name="app_name">My Tic-Tac-Toe</string>
    <string name="title_new_game">New Game</string>
    <string name="title_continue_game">Continue game</string>
    <string name="title_settings">Settings</string>
    <string name="dialog_continue_game">Continue game</string>
    <string name="dialog_settings">Settings</string>
    <string name="dialog_exit">Save and Quit</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_difficulty">Difficulty</string>
    <string name="settings_game_rules">Game Rules</string>
    <string name="rules_vertical">Vertical Row</string>
    <string name="rules_horizontal">Horizontal Row</string>
    <string name="rules_diagonal">Diagonal Row</string>
    <string name="settings_to_back">Back</string>
    <string name="dialog_status_win">You win!</string>
    <string name="dialog_status_lose">You lose!</string>
    <string name="dialog_status_draw">It\'s a draw!</string>
    <string name="popup_title">Menu</string>
    <string name="popup_close" translatable="false">OK</string>
    <string name="preference_file_key" translatable="false">my.tic_tac_toe.file_key</string>
    <string name="close_game">close game</string>
    <string name="open_popup_menu">open popup menu</string>
    <string name="cell_1_1">cell 1 1</string>
    <string name="cell_1_2">cell 1 2</string>
    <string name="cell_1_3">cell 1 3</string>
    <string name="cell_2_1">cell 2 1</string>
    <string name="cell_2_2">cell 2 2</string>
    <string name="cell_2_3">cell 2 3</string>
    <string name="cell_3_1">cell 3 1</string>
    <string name="cell_3_2">cell 3 2</string>
    <string name="cell_3_3">cell 3 3</string>
    <string name="logo">logo</string>
    <string name="easier">easier</string>
    <string name="harder">harder</string>
    <string name="emoji">emoji</string>
    <string-array name="game_level">
        <item>SIMPLE</item>
        <item>NORMAL</item>
        <item>HARD</item>
    </string-array>
</resources>