<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        tools:context=".SettingsActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_settings"
            android:textColor="@color/brown"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/settings_sound"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/settings_difficulty"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soundBar" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/settings_game_rules"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prev_lvl" />

        <TextView
            android:id="@+id/infoLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_medium"
            tools:text="SIMPLE"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/prev_lvl"
            app:layout_constraintEnd_toStartOf="@+id/next_lvl"
            app:layout_constraintStart_toEndOf="@+id/prev_lvl"
            app:layout_constraintTop_toTopOf="@+id/prev_lvl" />

        <SeekBar
            android:id="@+id/soundBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:progressDrawable="@drawable/style_seekbar"
            android:splitTrack="false"
            android:thumb="@drawable/ic_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/prev_lvl"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_previous"
            android:contentDescription="@string/easier" />

        <ImageView
            android:id="@+id/next_lvl"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/ic_next"
            android:contentDescription="@string/harder" />

        <CheckBox
            android:id="@+id/checkBox_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:button="@drawable/style_checkbox"
            android:checked="false"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/rules_vertical"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <CheckBox
            android:id="@+id/checkBox_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:button="@drawable/style_checkbox"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/rules_horizontal"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_vertical" />

        <CheckBox
            android:id="@+id/checkBox_diagonal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:button="@drawable/style_checkbox"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/rules_diagonal"
            android:textColor="@color/brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_horizontal" />

        <TextView
            android:id="@+id/toBack"
            style="@style/style_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/settings_to_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>